--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,3 +1,4 @@
+--- layout: download.swig ---
 <div class="home-full-width-content">
   <div class="doc-home-title">
     <h1 class="font-logo">LeanCloud Documentation</h1>
