--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -36,9 +36,13 @@
 <script src="bootstrap-hover-dropdown.js"></script>
 <script src="jquery.scrollTo.min.js"></script>
 <script src="pangu.js"></script>
+<script>
+  pangu.page_spacing();
+</script>
+
+<!-- toc generate & side bar style -->
 {% if basename!='index' %}
 <script src="contents.js"></script>
-
 <script>
 $("h1,h2,h3,h4,h5,a").removeAttr("id");
 gajus.contents.formatId = function(str){
@@ -116,11 +120,19 @@ $(".sidebar-affix-shadow").hover(
 
 </script>
 {% endif %}
+<!-- end toc & sidebar -->
+
+<!-- code pretty -->
+<script src="pretty/prettify.js" type="text/javascript"></script>
+
 <script>
-pangu.page_spacing();
-
-
 $(function() {
+  var pres = document.getElementsByTagName("pre");
+  for (var i = 0; i < pres.length; i++) {
+      pres[i].className = "prettyprint";
+
+  }
+
   prettyPrint();
 
   $("pre.prettyprint code").each(function(index, ele) {
@@ -144,6 +156,8 @@ $(function() {
   });
 });
 </script>
+<!-- end code pretty -->
+
 <script src="custom.js">
 </script>
 
