ready refactor js dir

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -2,13 +2,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimal-ui">
 
-
-<script src="zeroclipboard/zeroclipboard.js"></script>
-<script src="https://download.leancloud.cn/sdk/latest.js"></script>
-<script type="text/javascript">
-ZeroClipboard.setDefaults({
-    moviePath: 'zeroclipboard/zeroclipboard.swf'
-});
-</script>
 <title>LeanCloud 文档</title>
-<link rel="stylesheet" type="text/css" href="app.css">
+<link rel="stylesheet" type="text/css" href="custom/app.css">
