--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -31,22 +31,21 @@
     </ul>
   </div>
 </footer>
-<!-- basic lib -->
+
+<script src="https://download.leancloud.cn/sdk/latest.js"></script>
+
+<!-- build:js custom/js/all.js -->
 <script src="custom/js/lib/jquery.min.js"></script>
 <script src="custom/js/lib/bootstrap.min.js"></script>
 <script src="custom/js/lib/bootstrap-hover-dropdown.js"></script>
 <script src="custom/js/lib/pretty/prettify.js" type="text/javascript"></script>
-<!-- <script src="jquery.scrollTo.min.js"></script> -->
 <script src="custom/js/lib/pangu.js"></script>
 <script src="custom/js/lib/angular/angular.min.js"></script>
 <script src="custom/js/lib/zeroclipboard/zeroclipboard.js"></script>
-<script src="https://download.leancloud.cn/sdk/latest.js"></script>
 <script src="custom/js/lib/markdown.min.js"></script>
-
-<!-- end basic lib -->
-
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
+<!-- endbuild -->
 
 {% if basename!='index' and basename!='sdk_down' and basename !='demo' %}
 <script src="custom/js/lib/contents.js"></script>
@@ -57,7 +56,6 @@
 <script type="text/javascript" src="custom/js/download.js">
 </script>
 {% endif %}
-
 
 <script>
   pangu.page_spacing();
