--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -4,6 +4,7 @@
 
 <title>LeanCloud 文档</title>
 <link rel="stylesheet" type="text/css" href="custom/app.css">
+
 <script src="custom/js/lib/jquery.min.js"></script>
 <script src="custom/js/lib/bootstrap.min.js"></script>
 <script src="custom/js/lib/bootstrap-hover-dropdown.js"></script>
@@ -15,3 +16,5 @@
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
+<!-- build:js custom/js/all.js -->
+<!-- endbuild -->
