simplify implementation fix double curl code display

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -13,6 +13,7 @@
 <script src="custom/js/lib/angular/angular.min.js"></script>
 <script src="custom/js/lib/zeroclipboard/zeroclipboard.js"></script>
 <script src="custom/js/lib/markdown.min.js"></script>
+<script src="custom/js/prepare-dom.js"></script>
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
