update js demo link

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -203,7 +203,7 @@
             </li>
             <li class="muted">·</li>
             <li>
-              <a href="https://github.com/leancloud/leancloud-demos#javsscript">Demo</a>
+              <a href="https://github.com/leancloud/leancloud-demos#javascript">Demo</a>
             </li>
           </ul>
 
