--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -1280,6 +1280,12 @@ select.form-control {
       background-color: @gray-lighter;
       box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
     }
+
+    // Disabled and checked state
+    &:checked ~ .control-indicator,
+    &.checked ~ .control-indicator {
+      background-color: fade(@link-color, 60%);
+    }
   }
 }
 
