--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -8,7 +8,8 @@
 <script src="custom/js/lib/jquery.min.js"></script>
 <script src="custom/js/lib/bootstrap.min.js"></script>
 <script src="custom/js/lib/bootstrap-hover-dropdown.js"></script>
-<script src="custom/js/lib/pretty/prettify.js" type="text/javascript"></script>
+<script src="custom/js/lib/pretty/prettify.js"></script>
+<script src="custom/js/lib/jquery.scrollTo.min.js"></script>
 <script src="custom/js/lib/pangu.js"></script>
 <script src="custom/js/lib/angular/angular.min.js"></script>
 <script src="custom/js/lib/zeroclipboard/zeroclipboard.js"></script>
