--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -14,6 +14,9 @@
 <script src="custom/js/lib/angular/angular.min.js"></script>
 <script src="custom/js/lib/zeroclipboard/zeroclipboard.js"></script>
 <script src="custom/js/lib/markdown.min.js"></script>
+<script src="custom/js/lib/md5.js"></script>
+
+<script src="custom/js/lib/angular-gravatar.js"></script>
 <script src="custom/js/prepare-dom.js"></script>
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
