--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -48,13 +48,20 @@
 
 
                 <li class="dropdown" ng-show="user.username">
-                    <a role="button" class=" user-name">
+                    <a role="button" class="dropdown-toggle user-name" data-toggle="dropdown">
                         <span class="user-gravatar">
                             <img gravatar-src="user.email" gravatar-size="64">
                         </span>
                         <span class="user-name-text">{{user.username}}</span>
                     </a>
-
+                    <ul class="dropdown-menu">
+                        <li><a href="/settings.html">帐号设置</a></li>
+                        <li><a href="/applist.html">控制台</a></li>
+                        <li><a href="/settings.html#/setting/team">团队管理</a></li>
+                        <li><a href="/bill.html#/bill/general">财务</a></li>
+                        <!-- <li><a href="settings.html#/setting/invite">邀请好友</a></li> -->
+                        <li ng-show="user.username" style=""><a ng-click="signout()">登出</a></li>
+                    </ul>
                 </li>
                 <li ng-hide="user.username">
                     <a href="/login.html#/signin">登录</a>
