fix(style): gravatar appearance not defined

--- a/custom/less/app-docs.less
+++ b/custom/less/app-docs.less
@@ -33,7 +33,7 @@
 @import "comp-callout";
 @import "comp-sidebar";
 @import "comp-loader";
-// @import "comp-avatar";
+@import "comp-avatar";
 @import "comp-table";
 @import "comp-notifications";
 @import "comp-label";
