feat(style): move fonts into `custom` dir

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -23,4 +23,4 @@
 <script src="custom/js/demo.js"></script>
 <!-- endbuild -->
 
-<link rel="stylesheet" type="text/css" href="custom/app-docs.css">
+<link rel="stylesheet" type="text/css" href="custom/css/app-docs.css">
