--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -250,6 +250,11 @@ body {
 .sidebar-wrapper {
   max-height: 100%;
   overflow-y: scroll;
+  backface-visibility: hidden;
+  // Fix Safari font antialas bug
+  // Version: 7.0.6 (9537.78.2)
+  // Date: Oct 11, 2014, 9:57 AM
+  transform: translate3d(0, 0, 0);
 
   &.affix {
     top: 0;
@@ -270,6 +275,15 @@ body {
   }
 
   &.affix,
+  &.affix-bottom {
+
+    #toc .back-to-top {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+
+  &.affix,
   &.affix-top,
   &.affix-bottom {
 
@@ -280,11 +294,102 @@ body {
       }
     }
   }
+
+  // Scrollbars
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb:window-inactive {
+    // background: rgba(255,0,0,0.4);
+  }
+
+  &:focus,
+  &:hover,
+  &:active {
+
+    &::-webkit-scrollbar-track {
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #f5f5f5;
+    }
+  }
+}
+
+// Sidebar gradient mask
+.sidebar-affix-shadow {
+  .clearfix;
+
+  @media (max-width: (@screen-sm - 1px)) {
+    display: none;
+  }
+
+  &:before,
+  &:after {
+    content: '';
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .2s ease;
+  }
+
+  &:before {
+    height: 30px;
+    top: 0;
+    background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 0) 100%);
+  }
+
+  &:after {
+    height: 100px;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #fff 100%);
+    opacity: 1;
+  }
+
+  &.on {
+
+    &:before,
+    &:after {
+      opacity: 1;
+    }
+  }
+
+  &.bottom {
+
+    &:after {
+      opacity: 0 !important;
+    }
+  }
 }
 
 #toc {
   width: 100%;
   padding: 10px 0 20px 0;
+
+  .back-to-top {
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .2s ease;
+
+    a {
+      font-size: 12px;
+      border-right: none;
+      padding-left: 10px;
+    }
+  }
 
   @media (max-width: (@screen-sm - 1px)) {
     position: static;
@@ -404,113 +509,6 @@ ul#toc,#toc li {
 
 #toc > li >ul{
   margin-left: 0;
-}
-
-// Sidebar gradient mask
-.sidebar-affix-shadow {
-  .clearfix;
-
-  @media (max-width: (@screen-sm - 1px)) {
-    display: none;
-  }
-
-  &:before,
-  &:after {
-    content: '';
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity .2s ease;
-  }
-
-  &:before {
-    height: 30px;
-    top: 0;
-    background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 0) 100%);
-  }
-
-  &:after {
-    height: 100px;
-    bottom: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #fff 100%);
-    opacity: 1;
-  }
-
-  &.on {
-
-    &:before,
-    &:after {
-      opacity: 1;
-    }
-  }
-
-  &.bottom {
-
-    &:after {
-      opacity: 0 !important;
-    }
-  }
-}
-
-.sidebar-wrapper {
-  backface-visibility: hidden;
-  // Fix Safari font antialas bug
-  // Version: 7.0.6 (9537.78.2)
-  // Date: Oct 11, 2014, 9:57 AM
-  transform: translate3d(0, 0, 0);
-
-  &::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 5px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb:window-inactive {
-    // background: rgba(255,0,0,0.4);
-  }
-
-  &:focus,
-  &:hover,
-  &:active {
-
-    &::-webkit-scrollbar-track {
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #f5f5f5;
-    }
-  }
-
-  #toc .back-to-top {
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .2s ease;
-
-    a {
-      font-size: 12px;
-      border-right: none;
-      padding-left: 10px;
-    }
-  }
-
-  &.affix,
-  &.affix-bottom {
-
-    #toc .back-to-top {
-      opacity: 1;
-      pointer-events: auto;
-    }
-  }
 }
 
 // Main content
