--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,31 +1,28 @@
 <footer class="footer" role="contentinfo">
   <div class="container-fluid">
-    <a href="http://leancloud.cn/" class="logo font-logo pull-right">
+    <a href="http://leancloud.cn/" class="logo font-logo pull-left">
       LeanCloud
     </a>
 
-    <ul class="footer-links" >
-      <li><a href="/about.html">关于<span class="mobile-hide">我们</span></a></li>
+    <ul class="footer-links pull-right">
+      <li><a href="/docs/">文档</a></li>
       <li class="muted">·</li>
       <li><a href="/pricing.html">价格</a></li>
       <li class="muted">·</li>
-      <li><a href="/docs/">文档</a></li>
-      <li class="muted">·</li>
       <li><a href="/docs/sdk_down.html">下载</a></li>
+      <li class="muted">·</li>
+      <li><a href="/apps.html" target="_self">App</a></li>
+      <li class="muted">·</li>
+      <li><a href="http://leancloud.cn/docs/faq.html" target="_self">FAQ</a></li>
+      <li class="muted">·</li>
+      <li><a href="http://ticket.avosapps.com/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
+      <!-- <li><a href="http://ticket.avosapps.com/tickets?token={{user.session_token || 'Gs5Xw4vjyCznrP6OcgMheOWDuatVpbFPiL78eMo6JC0dENB8'}}" target="_blank"><span class="mobile-hide">用户</span>反馈</a></li> -->
       <li class="muted">·</li>
       <li><a href="//status.leancloud.cn/"><span class="mobile-hide">健康</span>状态</a></li>
       <li class="muted">·</li>
-      <li><a href="http://ticket.avosapps.com/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
-      <li class="muted">·</li>
       <li><a href="http://forum.leancloud.cn/">社区</a></li>
       <li class="muted">·</li>
-      <li><a href="/jobs.html">工作<span class="mobile-hide">机会</span></a></li>
-      <li class="muted">·</li>
-      <li><a href="http://blog.leancloud.cn">Blog</a></li>
-      <li class="muted">·</li>
-      <li><a href="/logo.html">Logo</a></li>
-      <li class="muted">·</li>
-      <li><a href="/terms.html"><span class="mobile-hide">使用</span>协议</a></li>
+      <li><a href="http://blog.leancloud.cn/">Blog</a></li>
       <li class="muted">·</li>
       <li><a href="https://github.com/leancloud/avoscloud-doc">文档源码</a></li>
     </ul>
