[feature] 增加 js push sdk 的文档入口。

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -91,6 +91,7 @@
         <h2>JavaScript SDK</h2>
         <ul>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
+          <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
           <li><a href="https://github.com/leancloud/realtime-messaging-jssdk">JavaScript 实时通信 SDK</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
