--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -101,6 +101,7 @@
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">JavaScript</a>
           <ul class="dropdown-menu">
             <li><a href="js_guide.html">JavaScript 指南</a></li>
+            <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
             <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
           </ul>
