feat(navbar): hide dashboard link for non-logged in users

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -9,7 +9,7 @@
 
             <div class="navbar-app-actions-wrap">
                 <ul class="nav navbar-nav navbar-app-actions" >
-                  <li class="dropdown dropdown-toggle-app-name">
+                  <li class="dropdown dropdown-toggle-app-name" ng-show="user.username">
                     <a href="/applist.html">
                       <i class="icon icon-dashbd-icon icon-blank-app"></i>
                       <div class="name">返回控制台</div>
