--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -33,7 +33,7 @@
 @state-danger-bg:                #f2dede;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", "WenQuanYi Micro Hei", sans-serif;
+@font-family-sans-serif:  "Helvetica Neue", Helvetica, STHeiti, "Microsoft Yahei", "WenQuanYi Micro Hei", Arial, Verdana, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 
@@ -1206,7 +1206,7 @@ select.form-control {
 
   input[type="checkbox"],
   input[type="radio"] {
-    position: absolute;
+    position: absolute !important;
     opacity: 0;
     z-index: -1;
   }
@@ -1279,12 +1279,12 @@ select.form-control {
       cursor: not-allowed;
       background-color: @gray-lighter;
       box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
-    }
 
-    // Disabled and checked state
-    &:checked ~ .control-indicator,
-    &.checked ~ .control-indicator {
-      background-color: fade(@link-color, 60%);
+      // Disabled and checked state
+      &:checked ~ .control-indicator,
+      &.checked ~ .control-indicator {
+        background-color: fade(@link-color, 60%);
+      }
     }
   }
 }
