增加 JavaScript 实时通信 SDK 文档入口。

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -102,8 +102,9 @@
           <ul class="dropdown-menu">
             <li><a href="js_guide.html">JavaScript 指南</a></li>
             <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
-            <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
+            <li><a href="js_realtime.html">JavaScript 实时通信 SDK</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
+            <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
           </ul>
         </li>
         <!-- <li class="dropdown">
