--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -92,7 +92,8 @@
         <ul>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
           <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
-          <li><a href="https://github.com/leancloud/realtime-messaging-jssdk">JavaScript 实时通信 SDK</a></li>
+          <li><a href="js_realtime.html">JavaScript 实时通信 SDK v2</a></li>
+          <li><a href="https://github.com/leancloud/realtime-messaging-jssdk">JavaScript 实时通信 SDK v1</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
       </div>
