--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -101,7 +101,7 @@
 
   </div>
   <!-- .row -->
-
+<hr>
   <div class="row">
 
     <div class="col-md-4">
@@ -118,6 +118,45 @@
     </div>
   <!-- .col-md-4 -->
 
+  <div class="col-md-4">
+    <div class="link-block">
+      <h2>Python SDK</h2>
+      <ul>
+        <li><a href="python_guide.html">Python 指南</a></li>
+        <li><a href="api/python/index.html">Python SDK API</a></li>
+
+      </ul>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="link-block">
+      <h2>REST API和开放平台</h2>
+      <ul>
+        <li><a href="rest_api.html">REST API 详解</a></li>
+        <li><a href="error_code.html">REST API 错误代码详解</a></li>
+        <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
+        <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
+      </ul>
+    </div>
+  </div>
+
+
+    <!-- .col-md-4 -->
+  </div>
+  <!-- .row -->
+<hr>
+  <div class="row">
+    <!-- .col-md-4 -->
+    <div class="col-md-4">
+      <div class="link-block">
+        <h2>云代码</h2>
+        <ul>
+          <li><a href="cloud_code_guide.html">云代码指南</a></li>
+          <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
+          <li><a href="js_guide.html">JavaScript 指南</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="col-md-4">
       <div class="link-block">
         <h2>消息推送和实时通信</h2>
@@ -130,34 +169,24 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-4">
-      <div class="link-block">
-        <h2>云代码</h2>
-        <ul>
-          <li><a href="cloud_code_guide.html">云代码指南</a></li>
-          <li><a href="cloud_code_commandline.html">云代码命令行工具</a></li>
-          <li><a href="js_guide.html">JavaScript 指南</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- .col-md-4 -->
-  </div>
-  <!-- .row -->
+   <div class="col-md-4">
+     <div class="link-block">
+       <h2>下载和其他</h2>
+       <ul>
+         <li><a href="sdk_down.html">SDK 下载</a></li>
+         <li><a href="demo.html">Demo</a></li>
+         <li><a href="data_security.html">数据和安全</a></li>
+         <li><a href="faq.html">常见问题</a></li>
+         <li><a href="tool_tips.html">常见功能提示</a></li>
+       </ul>
+     </div>
+   </div>
 
+
+  </div>
+  <hr>
+  <!-- .row -->
   <div class="row">
-    <!-- .col-md-4 -->
-    <div class="col-md-4">
-      <div class="link-block">
-        <h2>REST API和开放平台</h2>
-        <ul>
-          <li><a href="rest_api.html">REST API 详解</a></li>
-          <li><a href="error_code.html">REST API 错误代码详解</a></li>
-          <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
-          <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- .col-md-4 -->
     <div class="col-md-4">
       <div class="link-block">
         <h2>其他组件</h2>
@@ -166,27 +195,13 @@
           <li><a href="status_system.html">事件流系统</a></li>
           <li><a href="feedback.html">用户反馈开发指南</a></li>
           <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
-          <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a>
+          <li><a href="app_data_share.html">应用之间数据共享(Class 绑定)</a></li>
           <li><a href="user_groups.html">用户群分析指南</a></li>
-          <li><a href="bigquery_guide.html">离线数据分析使用指南</li>
+          <li><a href="bigquery_guide.html">离线数据分析使用指南</a></li>
         </ul>
       </div>
     </div>
-     <!-- .col-md-4 -->
-    <div class="col-md-4">
-      <div class="link-block">
-        <h2>下载和其他</h2>
-        <ul>
-          <li><a href="sdk_down.html">SDK 下载</a></li>
-          <li><a href="demo.html">Demo</a></li>
-          <li><a href="data_security.html">数据和安全</a></li>
-          <li><a href="faq.html">常见问题</a></li>
-          <li><a href="tool_tips.html">常见功能提示</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- .col-md-4 -->
+
   </div>
-  <!-- .row -->
 
 </div>
