add more links to page

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -86,6 +86,7 @@
             <li><a href="ios_os_x_guide.html">iOS / OS X 指南</a></li>
             <li><a href="ios_statistics.html">iOS 统计 SDK 开发指南</a></li>
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
+            <li><a href="ios_realtime_v2.html">iOS 实时通信开发指南(v2)</a></li>
             <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
           </ul>
         </li>
@@ -94,6 +95,7 @@
           <ul class="dropdown-menu">
             <li><a href="android_guide.html">Android 开发指南</a></li>
             <li><a href="android_statistics.html">Android 统计 SDK 开发指南</a></li>
+            <li><a href="android_realtime_v2.html">Android 实时通信开发指南(v2)</a></li>
             <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
           </ul>
         </li>
