--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -67,6 +67,7 @@
           <li><a href="ios_realtime.html">iOS 实时通信指南</a></li>
           <li><a href="ios_statistics.html">iOS 统计 SDK 开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
+          <li><a href="ios_realtime_v2.html">iOS 实时通信指南(v2)</a></li>
           <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
         </ul>
       </div>
@@ -80,6 +81,7 @@
           <li><a href="android_guide.html">Android 开发指南</a></li>
           <li><a href="android_realtime.html">Android 实时通信指南</a></li>
           <li><a href="android_statistics.html">Android 统计 SDK 开发指南</a></li>
+          <li><a href="android_realtime_v2.html">Android 实时通信指南(v2)</a></li>
           <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
         </ul>
       </div>
@@ -163,6 +165,7 @@
         <h2>消息推送和实时通信</h2>
         <ul>
           <li><a href="realtime.html">实时通信开发指南</a></li>
+          <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
           <li><a href="push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送推送证书配置</a></li>
         </ul>
