add realtime_v2 to more menu

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -130,6 +130,7 @@
             <li><a href="status_system.html">事件流系统</a></li>
             <li><a href="push_guide.html">消息推送开发指南</a></li>
             <li><a href="realtime.html">实时通信开发指南</a></li>
+            <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
             <li><a href="feedback.html">用户反馈组件开发指南</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
           </ul>
