--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -169,6 +169,25 @@
         <!-- .dl-cell -->
       </div>
 
+      <div class="col-md-6">
+        <div class="dl-cell">
+          <h2>JavaScript SDK</h2>
+          <ul class="list-unstyled list-inline">
+
+            <li><a href="https://github.com/leancloud/javascript-sdk" class="btn  "><i class="icon icon-github"></i> JavaScript Core SDK</a></li>
+            <li><a href=" https://github.com/leancloud/js-realtime-sdk" class="btn "><i class="icon icon-github"></i> JavaScript 实时通信 SDK</a></li>
+            <li><a href="https://github.com/leancloud/js-push-sdk" class="btn   "><i class="icon icon-github"></i> JavaScript 推送 SDK</a></li>
+
+          </ul>
+          <hr>
+          <h2>其他 SDK</h2>
+          <ul class="list-unstyled list-inline">
+            <li><a href="https://github.com/leancloud/python-sdk" class="btn  "><i class="icon icon-github"></i> Python SDK</a></li>
+            <li><a href="https://github.com/leancloud/cpp-sdk" class="btn  "><i class="icon icon-github"></i> C++ SDK</a></li>
+          </ul>
+        </div>
+      </div>
+
 
     </div>
   </div>
@@ -282,7 +301,7 @@
     </ul>
   </div>
 
-  <div class="col-md-12">
+<!--   <div class="col-md-12">
     <p>我们的开源 SDK：</p>
     <ul class="list-unstyled list-inline">
       <li><a href="https://github.com/leancloud/cpp-sdk" class="btn  btn-default btn-lg"><i class="icon icon-github"></i> C++ SDK</a></li>
@@ -295,7 +314,7 @@
 
     <br>
     <br>
-  </div>
+  </div> -->
   <!-- .col-md-12 -->
 
   <!-- Modals -->
