Python api default page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -126,7 +126,7 @@
       <h2>Python SDK</h2>
       <ul>
         <li><a href="python_guide.html">Python 指南</a></li>
-        <li><a href="api/python/index.html">Python SDK API</a></li>
+        <li><a href="api/python/leancloud.html">Python SDK API</a></li>
 
       </ul>
     </div>
