change priority bw realtime_v1/realtime_v2 docs

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -126,13 +126,13 @@
             <li class="divider"></li>
             <li><a href="rest_api.html">REST API 详解</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
+            <li><a href="push_guide.html">消息推送开发指南</a></li>
+            <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
             <li><a href="sns.html">SNS 组件开发指南</a></li>
             <li><a href="status_system.html">事件流系统</a></li>
-            <li><a href="push_guide.html">消息推送开发指南</a></li>
-            <li><a href="realtime.html">实时通信开发指南</a></li>
-            <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
             <li><a href="feedback.html">用户反馈组件开发指南</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
+            <li><a href="realtime.html">实时通信开发指南(v1)</a></li>
           </ul>
         </li>
       </ul>
