--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -136,7 +136,7 @@
       <h2>REST API和开放平台</h2>
       <ul>
         <li><a href="rest_api.html">REST API 详解</a></li>
-        <li><a href="error_code.html">REST API 错误代码详解</a></li>
+        <li><a href="error_code.html">错误码详解</a></li>
         <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
         <li><a href="oauth2_provider.html">LeanCloud 开放平台接入</a></li>
       </ul>
