--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -63,11 +63,10 @@
         <h2>iOS / OS X SDK</h2>
         <ul>
           <li><a href="ios_os_x_guide.html">iOS / OS X 指南</a></li>
-          <li><a href="ios_realtime_v2.html">iOS 实时通信指南(v2)</a></li>
+          <li><a href="ios_realtime_v2.html">iOS 实时通信指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
           <li><a href="ios_statistics.html">iOS 统计 SDK 开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
-          <li><a href="ios_realtime.html">iOS 实时通信指南(v1)</a></li>
           <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
         </ul>
       </div>
@@ -79,9 +78,8 @@
         <h2>Android SDK</h2>
         <ul>
           <li><a href="android_guide.html">Android 开发指南</a></li>
-          <li><a href="android_realtime_v2.html">Android 实时通信指南(v2)</a></li>
+          <li><a href="android_realtime_v2.html">Android 实时通信指南</a></li>
           <li><a href="android_statistics.html">Android 统计 SDK 开发指南</a></li>
-          <li><a href="android_realtime.html">Android 实时通信指南(v1)</a></li>
           <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
         </ul>
       </div>
@@ -94,8 +92,7 @@
         <ul>
           <li><a href="js_guide.html">JavaScript 指南</a></li>
           <li><a href="js_push.html">JavaScript 推送 SDK</a></li>
-          <li><a href="js_realtime.html">JavaScript 实时通信 SDK(v2)</a></li>
-          <li><a href="https://github.com/leancloud/realtime-messaging-jssdk">JavaScript 实时通信 SDK(v1)</a></li>
+          <li><a href="js_realtime.html">JavaScript 实时通信 SDK</a></li>
           <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
       </div>
@@ -165,7 +162,6 @@
         <h2>消息推送和实时通信</h2>
         <ul>
           <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
-          <li><a href="realtime.html">实时通信开发指南(v1)</a></li>
           <li><a href="push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送推送证书配置</a></li>
         </ul>
