修改导航分类

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -79,7 +79,10 @@
   <div class="container-fluid">
     <nav class="" role="navigation">
       <ul class="nav navbar-nav">
-        <li><a href="/docs/">文档首页</a></li>
+        <li>
+          <a href="/docs/">全部文档</a>
+        </li>
+        <li><a href="/start.html">快速入门</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">iOS / OS X</a>
           <ul class="dropdown-menu">
@@ -121,17 +124,19 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
-            <li><a href="/start.html">快速入门</a></li>
-            <li><a href="demo.html">Demo</a></li>
-            <li class="divider"></li>
             <li><a href="rest_api.html">REST API 详解</a></li>
             <li><a href="cloud_code_guide.html">云代码指南</a></li>
-            <li><a href="push_guide.html">消息推送开发指南</a></li>
-            <li><a href="realtime_v2.html">实时通信开发指南(v2)</a></li>
-            <li><a href="sns.html">SNS 组件开发指南</a></li>
-            <li><a href="status_system.html">事件流系统</a></li>
-            <li><a href="feedback.html">用户反馈组件开发指南</a></li>
+            <li><a href="push_guide.html">消息推送</a></li>
+            <li><a href="realtime_v2.html">实时通信(v2)</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
+            <li><a href="status_system.html">事件流(社交关系组件)</a></li>
+            <li><a href="sns.html">SNS 组件开发</a></li>
+            <li><a href="feedback.html">用户反馈组件</a></li>
+            <li><a href="python_guide.html">Python 开发指南</a></li>
+            <li class="divider"></li>
+            <li><a href="/docs/">查看所有文档</a></li>
+            <li><a href="demo.html">Demo</a></li>
+            <li><a href="http://leancloud.sexy">第三方库</a></li>
           </ul>
         </li>
       </ul>
