chore: sync stylesheets from upstream

--- a/custom/less/comp-sidebar.less
+++ b/custom/less/comp-sidebar.less
@@ -114,4 +114,15 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  // Relation subnav
+  .sub-nav {
+
+    li {
+
+      a {
+        margin-top: 0;
+      }
+    }
+  }
 }
