--- a/custom/less/plugin-solarized-light.less
+++ b/custom/less/plugin-solarized-light.less
@@ -24,6 +24,13 @@
     animation-duration: 1s;
     animation-name: copy;
   }
+
+  // Alternative classes
+  .string { color: @pretty-str; }
+  .number { color: @pretty-pln; }
+  .boolean { color: @pretty-tag; }
+  .null { color: @pretty-dec; }
+  .key { color: @pretty-typ; }
 }
 
 @keyframes copy {
