--- a/custom/less/section-leanstorage.less
+++ b/custom/less/section-leanstorage.less
@@ -358,6 +358,10 @@ select.input-sm.cloud-stat-condition {
   }
 }
 
+.show-row-detail {
+  cursor: pointer;
+}
+
 // app-search-set.html
 // cla-search-modal.html
 .appsearch-class-configs {
