--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -169,6 +169,16 @@
         border-color: @link-color;
       }
     }
+
+    &.disabled,
+    &[disabled] {
+      &,
+      &:hover,
+      &:focus,
+      &:active {
+        border-color: transparent;
+      }
+    }
   }
 
   &.open {
@@ -191,6 +201,31 @@
   }
 }
 
+
+//
+// Text Selectability
+// --------------------------------------------------
+* {
+  user-select: none;
+}
+
+a,
+p,
+label,
+input,
+textarea,
+code,
+pre,
+.callout *,
+.figure,
+.user-name-text {
+  user-select: text;
+}
+
+.footer *,
+.nav * {
+  user-select: none;
+}
 
 //
 // Modals
@@ -255,6 +290,13 @@
       .icon {
         display: inline;
       }
+    }
+  }
+
+  .icon {
+
+    &-locked-on {
+      color: @gray-light;
     }
   }
 }
@@ -553,12 +595,42 @@ textarea {
   border-color: @dropdown-fallback-border; // IE8 fallback
   border-color: @dropdown-border;
 
-  > li > a {
+  > li > a,
+  > li > button {
     border-color: transparent;
 
     &:hover,
     &:focus {
       border-color: transparent;
+    }
+  }
+
+  > li > button {
+    display: block;
+    background: transparent;
+    width: 100%;
+    text-align: start;
+    line-height: @line-height-base;
+    border: none;
+    // Hide outlines for link-like buttons
+    outline: none;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+      color: @dropdown-link-hover-color;
+      background-color: @dropdown-link-hover-bg;
+    }
+
+    &:disabled,
+    &.disabled {
+      opacity: .4;
+      cursor: not-allowed !important;
+
+      &:hover,
+      &:focus {
+        background: transparent;
+      }
     }
   }
 }
@@ -567,7 +639,8 @@ textarea {
 .dropdown-toggle + .dropdown-menu {
   margin-top: 2px !important;
 
-  > li > a {
+  > li > a,
+  > li > button {
     padding: 8px 15px;
     cursor: pointer;
   }
